<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/line">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:background="@drawable/back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="회원가입"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layer_gravity="center"
            android:paddingLeft="130dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="이메일"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="(전페이지에서 입력했던 이메일)"
            android:background="@drawable/text_gray"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="이름"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"/>
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/user_name"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:background="@drawable/edge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="닉네임"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"/>
        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/nickname"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:background="@drawable/edge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="휴대폰 번호"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"/>
        <Spinner
            android:id="@+id/state_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:background="@drawable/spinner"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:hint="@string/phone_number"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:background="@drawable/edge"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="105dp"
                android:layout_height="40dp"
                android:text="인증번호 받기"
                android:textColor="@color/darkGray"
                android:background="@drawable/text_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/certify_number"
            android:textColor="@color/darkGray"
            android:textSize="15dp"
            android:background="@drawable/text_gray"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="비밀번호"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"/>
        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:background="@drawable/edge"/>
        <EditText
            android:id="@+id/again_passwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/again_passwd"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:background="@drawable/edge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="영문 대소문자, 숫자, 특수문자를 3가지 이상으로 조합해 8자 이상 16자 이하로 입력해주세요."
            android:textSize="10dp"
            android:textColor="@color/black"
            android:paddingTop="3dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_black"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>