<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="25dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/zipView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:layout_marginTop="100dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="내 관심사에 맞는 방 추천, 다른 사람들과 \n후기 공유 서비스를 이용하려면 로그인이 \n필요합니다."
            android:textColor="@color/black"
            android:textSize="13dp"
            android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="이메일"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginTop="30dp" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edge"
                android:paddingLeft="5dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:text="@string/login_email"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="또는"
                android:textSize="12dp"
                android:gravity="center"
                android:layout_marginTop="25dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_kakaotalk"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/kakaotalk"
                    android:layout_marginTop="10dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_google"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/google"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_naver"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/naver"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_appole"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/apple"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/find_id_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_id_passwd"
                android:textSize="12dp"
                android:gravity="center"
                android:layout_marginTop="60dp"/>
    </LinearLayout>


</RelativeLayout>